--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "ember-resolver": "^8.0.0",
     "ember-source": "~3.18.0",
     "ember-template-lint": "^2.6.0",
+    "ember-test-selectors": "^4.1.0",
     "ember-truth-helpers": "^2.1.0",
     "ember-welcome-page": "^4.0.0",
     "eslint": "^6.8.0",
